完成奶牛数据回显

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">奶牛饲料配置系统</string>
     <string name="fodder_text">奶牛饲料养分数据</string>
     <string name="cow_text">奶牛营养需求数据</string>
-    <string name="optimize">奶牛饲料优化</string>
+    <string name="optimize_text">奶牛饲料优化</string>
     <string name="name_text">饲料名称</string>
     <string name="type_text">饲料类型</string>
     <string name="dry_matter_text">干物质(%)</string>
@@ -16,6 +16,6 @@
     <string name="weight_change_text">体重日变化</string>
     <string name="milk_production_text">产乳量(kg)</string>
     <string name="milk_fat_text">乳脂率(%)</string>
-    <string name="milk_protein">乳真蛋白(%)</string>
-    <string name="lactation_weeks">泌乳周</string>
+    <string name="milk_protein_text">乳真蛋白(%)</string>
+    <string name="lactation_weeks_text">泌乳周</string>
 </resources>
