--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,12 +12,9 @@
     <string name="phosphorus_text">磷(g/kg)</string>
     <string name="price_text">价格</string>
     <string name="variety_text">奶牛品种</string>
-    <string name="weight_text">奶牛体重</string>
-    <string name="weight_change_text">体重日变化</string>
-    <string name="milk_production_text">产乳量(kg)</string>
+    <string name="weight_text">奶牛体重(kg)</string>
+    <string name="milk_production_text">产奶量(kg)</string>
     <string name="milk_fat_text">乳脂率(%)</string>
-    <string name="milk_protein_text">乳真蛋白(%)</string>
-    <string name="lactation_weeks_text">泌乳周</string>
     <string name="add_text">添加</string>
     <string name="submit_text">确认</string>
     <string name="change_text">修改</string>
@@ -37,4 +34,5 @@
     <string name="magnesium_text">镁(g/kg)</string>
     <string name="sulphur_text">硫(g/kg)</string>
     <string name="crude_fat_text">粗脂肪(g/kg)</string>
+    <string name="milk_days_text">产奶天数</string>
 </resources>
